[tool.poetry]
name = "telegram-bot-handler"
version = "0.1.0"
description = "Bare-bones synchronous implementation of an interface for interfacing with a Telegram Bot. Includes a logging handler to send log records through the bot."
authors = ["SBroaddus220 <steven.broaddus220@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "telegram_bot_handler"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
